2005-10-06  Johan Dahlin  <johan@gnome.org>

	* gst/common.h:
	* gst/gstmodule.c: (init_gst):
	* gst/pygstiterator.c: (pygst_iterator_iter_next),
	(pygst_iterator_next), (pygst_iterator_push),
	(pygst_iterator_resync):
	Even more bored tonight: Implement next/resync/push. 
	Register type so we can call methods and so.
	
2005-10-06  Johan Dahlin  <johan@gnome.org>

	* codegen/argtypes.py:
	* gst/Makefile.am:
	* gst/common.h:
	* gst/gst.defs:
	* gst/gstbin.override:
	* gst/gstelement.override:
	* gst/pygstiterator.c: (pygst_iterator_dealloc),
	(pygst_iterator_iter_next), (pygst_iterator_new):
	* testsuite/test_iterator.py:
	Add GstIterator wrapping and tests.

2005-10-06  Edward Hervey  <edward@fluendo.com>

	* gst/gstpad.override:
	* gst/gststructure.override:
	* testsuite/testhelpermodule.c: (_wrap_emit_event):
	memleak fixes. Thanks valgrind :)

2005-10-06  Edward Hervey  <edward@fluendo.com>

	* gst-python.spec.in:
	Wow, that file hasn't been updated in a long long time.

	* gst/gstcaps.override: (_wrap_gst_caps_new_empty): 
	new caps should be freed on dealloc...

2005-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstcaps.override:
	  some more debugging
	* gst/gstevent.override:
	  represent using the string for the type

2005-10-06  Edward Hervey  <edward@fluendo.com>

	* gst/gstbuffer.override: (_wrap_gst_buffer__get_caps): 
	Proper wrapping of the GstBuffer.caps attribute

	* gst/gstmodule.c: (init_gst):
	* gst/pygstminiobject.c: (pygstminiobject_register_class):
	gst-debug initialisation should happen before anything else if we
	want the debugging functions to work.

2005-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  need at least 2.6.3, because that contains the code that
	  converts signal closure arguments to the correct Gst
	  types
	* gst/gstpad.override:
	  log name of probe handlers we call
	* testsuite/test_pad.py:
	  fix up tests; use TestCase base class methods
