@@ -1,3 +1,10 @@
+2005-10-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac:
+	* testsuite/Makefile.am:
+	* testsuite/python.supp:
+	  add valgrind checking to the testsuite
+
 2005-10-06  Johan Dahlin  <johan@gnome.org>
 
 	* gst/common.h:
